Fix(Java): Make ProviderDataAccessor methods private as needed